| Summary: | ASTERISK-24236: res_hep_rtcp: Module incorrectly depends on pjsip | ||||
| Reporter: | Matt Jordan (mjordan) | Labels: | |||
| Date Opened: | 2014-08-14 15:54:33 | Date Closed: | 2014-08-14 16:35:53 | ||
| Priority: | Major | Regression? | No | ||
| Status: | Closed/Complete | Components: | Resources/res_hep_rtcp | ||
| Versions: | 12.5.0 13.0.0-beta1 | Frequency of Occurrence | |||
| Related Issues: |
| ||||
| Environment: | Attachments: | ||||
| Description: | The {{res_hep_rtcp}} module incorrectly attempts to include {{pjsip.h}}. This isn't needed, as the module has no dependency on PJPROJECT. Since it doesn't list {{pjsip}} as a dependency in its module configuration information, this causes it to fail to compile on systems without {{PJPROJECT}}.
Thanks to wedhorn for finding this issue. | ||||
| Comments: | |||||